# sc-vs-bot

./: .gitignore  README.md
bot/: bot.js  package.json
client/: Dockerfile  client.sh  go.bat  publish.bat  stop.bat
client/node/: client.js  network.js  package.json  play.js
host/: Dockerfile  deploy.bat  go.bat  host.sh  kubernetes.yaml  publish.bat
host/node/: bot.js  game.js  host.js  index.html  lobby.js  network.js  package.json
human/node/: client.js  config.js  game.js  network.js  package.json  play.js  play1.js  play2.js  proxy.js
human/rust/: Cargo.toml  README.md  publish.bat
human/rust/src/: client.rs  config.rs  game.rs  gui.rs  lobby.rs  main.rs  network.rs
