[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
directories = "6.0.0"
eframe = "0.34.2"
egui-async = "0.4.1"
futures-util = "0.3"
protobuf = { version = "=3.2.0" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sc2-proto = { git = "https://github.com/aiarena/sc2-proto-rs.git" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "process", "io-util", "sync", "fs"] }
tokio-tungstenite = "0.24"
